src/objects/Rule_Library__c/Rule_Library__c.object-meta.xml
<CustomObject>
    <label>Rule Library</label>
    <nameField>
        <displayFormat>RULE-{0000}</displayFormat>
        <label>Rule Library Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>