src/objects/Rule_Library__c/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>