src/objects/Rule_Library__c/fields/Lookup_Type__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Type__c</fullName>
    <label>Lookup Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CodeSearch</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>