src/objects/Rule_Library__c/fields/Multiple_Value_Count__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Value_Count__c</fullName>
    <label>Multiple Value Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>