src/objects/Rule_Library__c/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <formula>Rule_Field__c&amp;&quot; &quot;&amp;TEXT(Rule_Operator__c)&amp;&quot; &quot;&amp;Rule_Value__c</formula>
    <label>Rule Description</label>
    <type>Text</type>
</CustomField>