src/objects/Rule_Library__c/fields/Rule_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Rule_Diagnosis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>