src/objects/Rule_Library__c/fields/Rule_Field__c.field-meta.xml
<CustomField>
    <fullName>Rule_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>