src/objects/Rule_Library__c/fields/Rule_Gender__c.field-meta.xml
<CustomField>
    <fullName>Rule_Gender__c</fullName>
    <label>Rule Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>