src/objects/Rule_Library__c/fields/Rule_Library_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Library_Ext_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Rule Library Ext Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>