src/objects/Rule_Library__c/fields/Rule_Operator__c.field-meta.xml
<CustomField>
    <fullName>Rule_Operator__c</fullName>
    <label>Rule Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>STARTS WITH</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>