src/objects/Rule_Library__c/fields/Rule_Value__c.field-meta.xml
<CustomField>
    <fullName>Rule_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>