src/objects/Rule_Library__c/fields/Works_with_Rule_Combinations_Only__c.field-meta.xml
<CustomField>
    <fullName>Works_with_Rule_Combinations_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Works with Rule Combinations Only</label>
    <type>Checkbox</type>
</CustomField>