src/objects/Rule_Library__c/listViews/All_Rules.listView-meta.xml
<ListView>
    <fullName>All_Rules</fullName>
    <columns>NAME</columns>
    <columns>Rule_Library_Ext_Id__c</columns>
    <columns>Rule_Gender__c</columns>
    <columns>Rule_Field__c</columns>
    <columns>Rule_Operator__c</columns>
    <columns>Rule_Value__c</columns>
    <columns>Rule_ICD__c</columns>
    <columns>Rule_Diagnosis__c</columns>
    <columns>is_Active__c</columns>
    <columns>Works_with_Rule_Combinations_Only__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
</ListView>